<resources>
    <string name="app_name">Calculadora</string>
    <string name="ac">AC</string>
    <string name="inverterSinal">+/-</string>
    <string name="porcentagem">%</string>
    <string name="divisao">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplicacao">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subitracao">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="adicao">+</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="igual">=</string>
    <string name="funcaoCalc">🥼</string>
    <string name="zero">0</string>
</resources>