<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/historico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="ultimo resultado"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/conta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="conta"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/historico" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_cinza"
            android:contentDescription="@string/ac"
            android:gravity="center"
            android:text="@string/ac"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnInverterSinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_cinza"
            android:contentDescription="@string/inverterSinal"
            android:gravity="center"
            android:text="@string/inverterSinal"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPorcentagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_cinza"
            android:contentDescription="@string/porcentagem"
            android:gravity="center"
            android:text="@string/porcentagem"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDivisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_laranja"
            android:contentDescription="@string/divisao"
            android:gravity="center"
            android:text="@string/divisao"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_7"
            android:gravity="center"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_8"
            android:gravity="center"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_9"
            android:gravity="center"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMultiplicacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_laranja"
            android:contentDescription="@string/multiplicacao"
            android:gravity="center"
            android:text="@string/multiplicacao"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_4"
            android:gravity="center"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_5"
            android:gravity="center"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_6"
            android:gravity="center"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSubitracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_laranja"
            android:contentDescription="@string/subitracao"
            android:gravity="center"
            android:text="@string/subitracao"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_1"
            android:gravity="center"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_2"
            android:gravity="center"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_3"
            android:gravity="center"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAdicao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_laranja"
            android:contentDescription="@string/adicao"
            android:gravity="center"
            android:text="@string/adicao"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnFuncaoCalc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/funcaoCalc"
            android:gravity="center"
            android:src="@drawable/calculator"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/_0"
            android:gravity="center"
            android:text="@string/_0"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_preto"
            android:contentDescription="@string/decimal"
            android:gravity="center"
            android:text="@string/decimal"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:background="@drawable/ic_background_button_laranja"
            android:contentDescription="@string/igual"
            android:gravity="center"
            android:text="@string/igual"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>